      and CloudFiles driver. (LIBCLOUD-369)
      [Stefan Friesel]

    - Store last_modified timestamp in the Object extra dictionary in the S3
      driver. (LIBCLOUD-373)
      [Stefan Friesel]

  *) Load Balancer

   - Expose CloudStack driver directly through the Provider.CLOUDSTACK
     constant.
     [Tomaz Muraus]

Changes with Apache Libcloud 0.13.1

 *) General

    - Fix a regression introduced in 0.13.0 and make sure to include
      Content-Length 0 with PUT and POST requests. (LIBCLOUD-362, LIBCLOUD-390)
      [Tomaz Muraus]

 *) Compute

    - Fix a bug in the ElasticHosts driver and check for right HTTP status
      code when determining drive imaging success. (LIBCLOUD-363)
      [Bob Thompson]

    - Update Opsource driver to include node public ip address (if available).
      (LIBCLOUD-384)
      [Michael Bennett]

  *) Storage

    - Fix a regression with calling encode_container_name instead of
      encode_object_name on object name in get_object method.
      Reported by Ben Meng (LIBCLOUD-366)
      [Tomaz Muraus]

    - Ensure that AWS S3 multipart upload works for small iterators.
      (LIBCLOUD-378)
      [Mahendra M]

Changes with Apache Libcloud 0.13.0:

 *) General

   - Add homebrew curl-ca-bundle path to CA_CERTS_PATH. This will make Libcloud
     use homebrew curl ca bundle file (if available) for server certificate
     validation. (LIBCLOUD-324)
     [Robert Chiniquy]

   - Modify OpenStackAuthConnection and change auth_token_expires attribute to
     be a datetime object instead of a string.
     [Tomaz Muraus]

   - Modify OpenStackAuthConnection to support re-using of the existing auth
     token if it's still valid instead of re-authenticating on every
     authenticate() call.
     [Tomaz Muraus]

   - Modify base Connection class to not send Content-Length header if body is
     not provided.
     [Tomaz Muraus]

   - Add the new error class ProviderError and modify InvalidCredsError to
     inherit from it. (LIBCLOUD-331)