@@ -65,11 +65,14 @@ class ZerigoTests(unittest.TestCase):
         zone = self.driver.list_zones()[0]
         records = list(self.driver.list_records(zone=zone))
 
-        self.assertEqual(len(records), 1)
+        self.assertEqual(len(records), 2)
         self.assertEqual(records[0].name, 'www')
         self.assertEqual(records[0].type, RecordType.A)
         self.assertEqual(records[0].data, '172.16.16.1')
         self.assertEqual(records[0].extra['fqdn'], 'www.example.com')
+
+        self.assertEqual(records[1].name, 'test')
+        self.assertEqual(records[1].extra['ttl'], 3600)
 
     def test_list_records_no_results(self):
         zone = self.driver.list_zones()[0]
