@@ -92,6 +92,12 @@ Changes with Apache Libcloud in development
      constant.
      [Tomaz Muraus]
 
+ *) DNS
+
+   - Modify Zerigo driver to include record TTL in the record 'extra' attribute
+     if a record has a TTL set.
+     [Tomaz Muraus]
+
 Changes with Apache Libcloud 0.13.1
 
  *) General
